gcc/testsuite/gm2/iso/fail/constsubrange.mod
MODULE constsubrange ;

VAR
   a, b: [10..20] ;
BEGIN
   a := 10 ;
   b := 1 ;
END constsubrange.
